--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,8 @@
   </head>
 
   <body>
+    <%= render 'layouts/navbar' %>
+    <%= render 'layouts/flashes' %>
     <%= yield %>
   </body>
 </html>
