--- a/app/views/environment_readings/index.html.erb
+++ b/app/views/environment_readings/index.html.erb
@@ -1,3 +1,3 @@
 <div class="container pt-4">
-  <%= render partial: 'table', locals: { environment_readings: @environment_readings } %>
+  <%= react_component('EnvironmentReading', props: { environmentReadings: @environment_readings }) %>
 </div>
